=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

    beta32

    * label positing finally dealt with for atoms.

    * fixed defer_builds_mode=2, FINALLY.

    * depth information for selective antialiasing -- more efficient!

    beta31

    * B & W Molscript & David Goodsell look-alike modes
    
    * light4, light5, light6, light7

    * fixed line width for perspective ray tracing for better WYSIWYG

    * label_shadow_mode setting

    * draggable atom labels
    
    * fixed handedness of triangles in CGO cylinders

    * improved hydrogen bond detection for alcohols and added
      h_bond_exclusion setting for limiting intramolecular h_bonds

    * labels argument to distance, angle, dihedral changed to 'label'

    * introduced wrapping and handedness into interpolations

    * fixed yet another eigenbug

    * new color named "object" for stick_color...(should add others later)

    * fixed surface object show and hide menus

    * fixed gadget picking/dragging broken in beta30
    
    beta30

    * fixed session-reading bug from old (0.96) sessions

    * support for multiple lights, and increased rationalization of 
     OpenGL and renderer lighting models

    * FreeType2 integration -- scalable fonts

    beta28

    * double-click on internal gui tab to hide it

    * fixed annoying problem with pop-up menus that fold back on self

    beta27

    * finished adding nucleic acid representations

    beta26

    * reworked some of the rendering code to work around OpenGL bugs

    beta24

    * proof of concept: molecular "Maya"

    * restored ability to move slice objects using shift actions

    beta23

    * fixed newly introduced scene bugs from beta22

    * binary GRD file fixes

    beta22

    * bump check

    * fixed busted GLU and GLN rotamers in library

    * dragging wizard, drag molecule (DrgM) mouse action